[package]
name = "iced-trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-iced = "0.10"
iced = { version = "0.12.1", features = ["canvas", "tokio"] }
plotters="0.3"
chrono = "0.4.37"
plotters-backend = "0.3.5"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["sync"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
tokio-native-tls = "0.3.1"
base64 = "0.22.0"
native-tls = "0.2.11"
tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = "0.3.30"
serde_json = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
[dependencies.async-tungstenite]
version = "0.25"
features = ["tokio-rustls-webpki-roots"]

