[package]
name = "iced-trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-iced = "0.10"
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "lazy", "image", "advanced"] }
plotters="0.3"
chrono = "0.4.37"
plotters-backend = "0.3.5"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full", "macros"] }
tokio-tungstenite = "0.21.0"
url = "2.5.0"
tokio-native-tls = "0.3.1"
base64 = "0.22.0"
native-tls = "0.2.11"
tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = "0.3.30"
serde_json = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
iced_table = "0.12.0"
iced_futures = "0.12.0"
iced_aw = { version = "0.8.0", features = ["quad", "menu"] }
anyhow = "1.0.86"
bytes = "1.6.0"
sonic-rs = "0.3.7"
fastwebsockets = { version = "0.7.2", features = ["upgrade"] }
http-body-util = "0.1.2"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1.0", features = ["tokio"] }
tokio-rustls = "0.24.0"
webpki-roots = "0.23.0"
[dependencies.async-tungstenite]
version = "0.25"
features = ["tokio-rustls-webpki-roots"]
